Practice ecample with multi page navigation

--- a/about.html
+++ b/about.html
@@ -6,6 +6,93 @@
     <title>About</title>
 </head>
 <body>
-    
+
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="#team">Team</a></li>
+            <li><a href="#mission">Nission</a></li>
+        </ul>
+    </nav>
+
+    <section id="about">
+        <h2>About the company</h2>
+        <pre>
+
+            An "About" section on a website summarizes the company or individual, sharing its purpose, story, and values. It's a place to build trust, showcase expertise, and connect with visitors on a personal level. Effective "About" sections tell a story, highlight unique value propositions, and often include social proof like testimonials or statistics. 
+Here's a breakdown of key elements and examples:
+Key Elements:
+Storytelling: Share your origin story, how you started, and the problem you're solving. 
+Mission and Values: Clearly state your purpose and the principles that guide your work. 
+Unique Value Proposition: Explain what makes you different and why visitors should choose you. 
+Social Proof: Include testimonials, case studies, awards, or other indicators of your credibility. 
+Call to Action: Encourage visitors to connect, learn more, or take the next step. 
+Visuals: Use high-quality photos, videos, or graphics to make your page more engaging. 
+Professionalism: Maintain a consistent brand voice and tone throughout the section. 
+Example (for a fictional company, "Acme Corp"):
+"At Acme Corp, we believe in [state core value - e.g., innovation] and are dedicated to [state purpose - e.g., developing cutting-edge solutions for [target audience]]. Our journey began when [share origin story - e.g., a team of engineers saw a gap in the market for efficient [solution]]. We've since grown to [mention key milestones - e.g., launch new products, expand our team], all while staying true to our core values. Our commitment to [mention value] is reflected in our [mention specific actions - e.g., customer-centric approach, rigorous testing process]. We're proud of the [mention positive results - e.g., positive feedback from clients, awards we've won] and are excited about the future. Learn more about our team [link to team page] or get in touch [link to contact page]." 
+Example (for a personal website/blog):
+"Hi, I'm [Your Name], a [Your Profession] passionate about [Your Area of Expertise]. My blog is a space for [your target audience] to [what you offer them - e.g., learn about digital marketing, find inspiration for their creative projects]. I started this blog because [share your "why" - e.g., I wanted to share my knowledge and help others grow]. I believe in [your core values - e.g., continuous learning, the power of storytelling]. You'll find posts on [topics you cover] and I hope you find something that resonates with you. Let's connect on [social media links]." 
+An "About" section on a website summarizes the company or individual, sharing its purpose, story, and values. It's a place to build trust, showcase expertise, and connect with visitors on a personal level. Effective "About" sections tell a story, highlight unique value propositions, and often include social proof like testimonials or statistics. 
+Here's a breakdown of key elements and examples:
+Key Elements:
+Storytelling: Share your origin story, how you started, and the problem you're solving. 
+Mission and Values: Clearly state your purpose and the principles that guide your work. 
+Unique Value Proposition: Explain what makes you different and why visitors should choose you. 
+Social Proof: Include testimonials, case studies, awards, or other indicators of your credibility. 
+Call to Action: Encourage visitors to connect, learn more, or take the next step. 
+Visuals: Use high-quality photos, videos, or graphics to make your page more engaging. 
+Professionalism: Maintain a consistent brand voice and tone throughout the section. 
+Example (for a fictional company, "Acme Corp"):
+"At Acme Corp, we believe in [state core value - e.g., innovation] and are dedicated to [state purpose - e.g., developing cutting-edge solutions for [target audience]]. Our journey began when [share origin story - e.g., a team of engineers saw a gap in the market for efficient [solution]]. We've since grown to [mention key milestones - e.g., launch new products, expand our team], all while staying true to our core values. Our commitment to [mention value] is reflected in our [mention specific actions - e.g., customer-centric approach, rigorous testing process]. We're proud of the [mention positive results - e.g., positive feedback from clients, awards we've won] and are excited about the future. Learn more about our team [link to team page] or get in touch [link to contact page]." 
+Example (for a personal website/blog):
+"Hi, I'm [Your Name], a [Your Profession] passionate about [Your Area of Expertise]. My blog is a space for [your target audience] to [what you offer them - e.g., learn about digital marketing, find inspiration for their creative projects]. I started this blog because [share your "why" - e.g., I wanted to share my knowledge and help others grow]. I believe in [your core values - e.g., continuous learning, the power of storytelling]. You'll find posts on [topics you cover] and I hope you find something that resonates with you. Let's connect on [social media links]." 
+
+An "About" section on a website summarizes the company or individual, sharing its purpose, story, and values. It's a place to build trust, showcase expertise, and connect with visitors on a personal level. Effective "About" sections tell a story, highlight unique value propositions, and often include social proof like testimonials or statistics. 
+Here's a breakdown of key elements and examples:
+Key Elements:
+Storytelling: Share your origin story, how you started, and the problem you're solving. 
+Mission and Values: Clearly state your purpose and the principles that guide your work. 
+Unique Value Proposition: Explain what makes you different and why visitors should choose you. 
+Social Proof: Include testimonials, case studies, awards, or other indicators of your credibility. 
+Call to Action: Encourage visitors to connect, learn more, or take the next step. 
+Visuals: Use high-quality photos, videos, or graphics to make your page more engaging. 
+Professionalism: Maintain a consistent brand voice and tone throughout the section. 
+Example (for a fictional company, "Acme Corp"):
+"At Acme Corp, we believe in [state core value - e.g., innovation] and are dedicated to [state purpose - e.g., developing cutting-edge solutions for [target audience]]. Our journey began when [share origin story - e.g., a team of engineers saw a gap in the market for efficient [solution]]. We've since grown to [mention key milestones - e.g., launch new products, expand our team], all while staying true to our core values. Our commitment to [mention value] is reflected in our [mention specific actions - e.g., customer-centric approach, rigorous testing process]. We're proud of the [mention positive results - e.g., positive feedback from clients, awards we've won] and are excited about the future. Learn more about our team [link to team page] or get in touch [link to contact page]." 
+Example (for a personal website/blog):
+"Hi, I'm [Your Name], a [Your Profession] passionate about [Your Area of Expertise]. My blog is a space for [your target audience] to [what you offer them - e.g., learn about digital marketing, find inspiration for their creative projects]. I started this blog because [share your "why" - e.g., I wanted to share my knowledge and help others grow]. I believe in [your core values - e.g., continuous learning, the power of storytelling]. You'll find posts on [topics you cover] and I hope you find something that resonates with you. Let's connect on [social media links]." 
+        </pre>
+    </section>
+
+    <section id="team">
+        <h2>Team</h2>
+        <pre>
+            A team section on a website should introduce the individuals behind the company, showcasing their personalities and expertise. It should include names, positions, and perhaps brief bios or fun facts. High-quality photos are essential to create a personal connection. HubSpot Blog and Mailchimp suggest including details like years with the company, relevant experience, and even personal interests to make the team more relatable. 
+Here's an example:
+Our Team
+Jane Doe, CEO: With over 15 years of experience in [industry], Jane leads our team with a passion for [company value]. She enjoys [hobby] in her free time. 
+John Smith, Lead Developer: John is our go-to expert for [technical skill]. He's been with us for 5 years, and his favorite project was [recent project]. In his spare time, John enjoys [another hobby]. 
+Sarah Lee, Marketing Manager: Sarah brings creativity and strategic thinking to our marketing efforts. She's been with us for 3 years and is passionate about [marketing focus]. She's also a big fan of [pop culture reference]. 
+Key Elements:
+Photos: High-quality headshots or candid shots that reflect the team's personality. 
+Names: Clearly display the names of each team member.
+Titles/Positions: Specify each person's role within the company.
+Brief Bios/Fun Facts: Include short, engaging descriptions that highlight their experience, expertise, and personality. 
+Years of Experience/Relevant Projects: Showcase their experience and accomplishments within the company or industry. 
+Contact Information (optional): Consider adding a way for visitors to connect with specific team members (e.g., email or LinkedIn).
+        </pre>
+    </section>
+
+    <section id="mission">
+        <h2>Mission</h2>
+        <pre>
+            Here are several examples of how you might summarize your mission in a website section, tailored to different business types and lengths:
+Short and sweet (1-2 sentences)
+For a non-profit: "Providing essential resources and support to underserved communities is the mission, fostering self-sufficiency and creating lasting positive change."
+For a tech company: "Empowering businesses to innovate and grow is the goal, by delivering cutting-edge software solutions that simplify complex challenges and enhance productivity."
+For a retail business: "Believing everyone deserves access to high-quality, sustainable fashion, the mission is to curate a collection of ethically sourced clothing that empowers your style and respect
+        </pre>
+    </section>
 </body>
 </html>
