--- a/index.html
+++ b/index.html
@@ -6,6 +6,101 @@
     <title>Home</title>
 </head>
 <body>
-    
+
+    <nav>
+        <ul>
+            <li><a href="about.html">About</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#contact">Contacts</a></li>
+            <li><a href="about.html#team">Team</a></li>
+            <li><a href="about.html#mission">Mission</a></li>
+        </ul>
+    </nav>
+
+    <section id="home">
+        <h2>Welcome to Our Home Page</h2>
+        <pre>
+            A good site summary should concisely capture the essence of the website, including its purpose, target audience, and key features. It should be informative, engaging, and accurately reflect the website's content and value proposition. A strong summary can pique a user's interest and encourage them to explore the site further. 
+Here's a more detailed breakdown of what makes a good site summary:
+Key elements of a good site summary:
+Clear and concise:
+Use straightforward language and avoid jargon. Keep it brief, ideally a few sentences to a paragraph.
+Accurate representation:
+The summary should accurately reflect the website's content and purpose. Don't over-promise or mislead the user.
+Engaging introduction:
+Start with a hook that grabs the reader's attention and makes them want to learn more.
+Highlight key features:
+Mention the most important aspects of the website, such as its unique selling proposition, core functionality, or main categories of content.
+Target audience:
+Briefly mention who the website is intended for. This helps users determine if it's relevant to them.
+Call to action (optional):
+Depending on the context, you might include a call to action, such as "Visit the site to learn more" or "Explore our products today."
+Avoid jargon and technical terms:
+Keep the language simple and accessible to a wide audience.
+Focus on benefits:
+Instead of just describing features, emphasize the benefits users will gain from visiting the site. 
+
+A good site summary should concisely capture the essence of the website, including its purpose, target audience, and key features. It should be informative, engaging, and accurately reflect the website's content and value proposition. A strong summary can pique a user's interest and encourage them to explore the site further. 
+Here's a more detailed breakdown of what makes a good site summary:
+Key elements of a good site summary:
+Clear and concise:
+Use straightforward language and avoid jargon. Keep it brief, ideally a few sentences to a paragraph.
+Accurate representation:
+The summary should accurately reflect the website's content and purpose. Don't over-promise or mislead the user.
+Engaging introduction:
+Start with a hook that grabs the reader's attention and makes them want to learn more.
+Highlight key features:
+Mention the most important aspects of the website, such as its unique selling proposition, core functionality, or main categories of content.
+Target audience:
+Briefly mention who the website is intended for. This helps users determine if it's relevant to them.
+Call to action (optional):
+Depending on the context, you might include a call to action, such as "Visit the site to learn more" or "Explore our products today."
+Avoid jargon and technical terms:
+Keep the language simple and accessible to a wide audience.
+Focus on benefits:
+Instead of just describing features, emphasize the benefits users will gain from visiting the site. 
+        </pre>
+    </section>
+
+    <section id="services">
+        <h2>Services</h2>
+        <pre>
+            A services section on a website should clearly outline what you offer, highlighting benefits and value, and include a strong call to action. It should be easy to understand, visually appealing, and persuasive, guiding potential clients towards taking the next step. Effective service pages also address target audience needs and pain points, often using targeted questions and tailored content. 
+Here's a breakdown of key elements and examples:
+1. Headline and Introduction:
+Start with a compelling headline that clearly states the service offered. 
+Provide a brief, engaging introduction that explains the service and its value. 
+Example: "Transform your online presence with our expert web design services. We create stunning, user-friendly websites that drive results." 
+2. Service Offerings:
+List and describe each service in detail. 
+Use clear and concise language, avoiding jargon. 
+Focus on the benefits of each service for the client, rather than just listing features. 
+Example: "Our web design services include: Custom website design, Mobile-responsive development, E-commerce solutions, and Ongoing website maintenance." 
+3. Value Proposition:
+Explain why your services are the best choice for the client. 
+Highlight what makes your services unique and how they address the client's specific needs. 
+Showcase your expertise and experience. 
+Example: "With years of experience and a proven track record of success, we help businesses like yours achieve their online goals." 
+        </pre>
+    </section>
+
+    <section id="contact">
+        <h2>Contacts</h2>
+        <pre>
+            Contact page summaries: Examples and best practices
+A well-crafted summary on your contact page can enhance user experience and encourage engagement. The best summaries are concise, welcoming, and clearly state how users can get in touch.
+Here are some examples of effective contact page summaries:
+1. Welcoming and approachable
+"We read and respond to every customer inquiry. We really do want to hear from you!"
+"Our customers mean the world to us, and we love hearing from you."
+"We get lonely when we don't hear from you. Get in touch today!"
+2. Benefit-focused
+"Got questions? We're here to help! Reach out anytime and we'll get back to you as quickly as possible—usually within 24 hours."
+"Need advice, guidance or just a quick answer? Don't hesitate to ask. We're all about making things easy and sharing what we know. Let's chat!"
+3. Direct and concise
+"We've been expecting you." - Ueno
+"Let's talk."
+        </pre>
+    </section>
 </body>
 </html>
