--- a/forms.html
+++ b/forms.html
@@ -6,6 +6,56 @@
     <title>Forms</title>
 </head>
 <body>
-    
+    <form action="/submit" method="POST">
+        <label for="name">Name:</label>
+        <input type="text" id="name" name="name"   placeholder="Enter your name" required>
+        <br>
+
+        <label for="password">Password:</label>
+        <input type="password" id="password" name="password" required>
+
+        <p>Gender:</p>
+        <div>
+            <input type="radio" id="male" name="gender" value="male">
+            <label for="male" style="margin-right: 20px;">Male</label>
+
+            <input type="radio" id="female" name="gender" value="female">
+            <label for="female">Female</label>
+        </div>
+
+        <p>Hobbies:</p>
+        <div>
+            <input type="checkbox" id="reading" name="hobbies" value="reading">
+            <label for="reading">Reading</label>
+
+            <input type="checkbox" id="gaming" name="hobbies" value="gaming">
+            <label for="gaming">Gaming</label>
+        </div>
+
+        <label for="country">Country:</label>
+        <select id="country" name="country">
+            <option value="usa">United States</option>
+            <option value="canada">Canada</option>
+            <option value="uk">United Kingdom</option>
+        </select>
+        <br>
+
+        <label for="comments">Comments:</label>
+        <textarea id="comments" name="comments" rows="4" cols="50"></textarea>
+
+        <label for="user-email">Email</label>
+        <input type="email" id="user-email" name="user-email" placeholder="Enter your email">
+        <br>
+
+        <label for="quantity">Quantity</label>
+        <input type="number" id="quantity" name="quantity" min="1" max="10" step="1">
+        <br>
+
+        <label for="birthdate">Birthdate</label>
+        <input type="date" id="birthdate" name="birthdate" disabled>
+        <br>
+
+        <input type="submit" value="Submit">
+    </form>
 </body>
 </html>
