--- a/contact-form.html
+++ b/contact-form.html
@@ -7,11 +7,16 @@
 </head>
 <body>
     <form action="#" method="post">
-        <label for="name">Name: </label>
-        <input type="text" name="name" id="name" placeholder="Enter your name" required><br><br>
+        <fieldset>
+            <legend>Personal Information</legend>
 
-        <label for="email">Email: </label>
-        <input type="email" name="email" id="email" placeholder="Enter your email" required><br><br>
+            <label for="name">Name: </label>
+            <input type="text" name="name" id="name" placeholder="Enter your name" required><br><br>
+    
+            <label for="email">Email: </label>
+            <input type="email" name="email" id="email" placeholder="Enter your email" required>
+
+        </fieldset><br>
 
         <label for="message">Message: </label>
         <textarea name="message" id="message" rows="5" cols="30" placeholder="Write your message here"></textarea><br><br>
