--- a/contact-form.html
+++ b/contact-form.html
@@ -22,6 +22,18 @@
         <textarea name="message" id="message" rows="5" cols="30" placeholder="Write your message here"></textarea><br><br>
 
         <input type="submit" value="Send">
+        <input type="reset">
     </form>
 </body>
 </html>
+
+<!-- <input type=
+    "text"
+    "password"
+    "checkbox"
+    "radio"
+    "email"
+    "number"
+    "date"
+    "submit"
+    "reset" -->
